--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "rc-slider": "^10.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
